// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Matches the snapshot 1`] = `
Array [
  .c0 {
  font-size: 0.75rem;
  margin-bottom: 8px;
  padding: 0;
}

<legend
    className="c0"
  >
    Vehicule
  </legend>,
  .c2 {
  color: #FFFFFF;
  height: 100%;
  opacity: 0;
  width: 100%;
}

.c0 {
  cursor: pointer;
  display: block;
  font-size: 0.875rem;
  padding-left: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:not(:first-of-type) {
  margin-top: 16px;
}

.c0 input {
  display: none;
}

.c0 input:checked + .box {
  background-color: #0080A5;
  border: 1px solid #0080A5;
}

.c0 input:checked + .box .c1 {
  opacity: 1;
}

.c0 .box {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: 5px;
  display: inline-block;
  height: 16px;
  left: 0;
  margin-top: 2px;
  position: absolute;
  top: 0;
  width: 16px;
}

.c0:hover .box {
  border: 1px solid #0080A5;
}

.c3 input:checked + .box .c1 {
  opacity: 1;
}

<label
    className="c0"
  >
     
    Boat
    <input
      name="vehicule1"
      type="checkbox"
      value="boat"
    />
    <span
      className="box"
    >
      <svg
        className="c1 c2 checkMark"
      />
    </span>
  </label>,
  .c2 {
  color: #FFFFFF;
  height: 100%;
  opacity: 0;
  width: 100%;
}

.c0 {
  cursor: pointer;
  display: block;
  font-size: 0.875rem;
  padding-left: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:not(:first-of-type) {
  margin-top: 16px;
}

.c0 input {
  display: none;
}

.c0 input:checked + .box {
  background-color: #0080A5;
  border: 1px solid #0080A5;
}

.c0 input:checked + .box .c1 {
  opacity: 1;
}

.c0 .box {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: 5px;
  display: inline-block;
  height: 16px;
  left: 0;
  margin-top: 2px;
  position: absolute;
  top: 0;
  width: 16px;
}

.c0:hover .box {
  border: 1px solid #0080A5;
}

.c3 input:checked + .box .c1 {
  opacity: 1;
}

<label
    className="c0"
  >
     
    Plane
    <input
      defaultChecked={true}
      name="vehicule2"
      type="checkbox"
      value="plane"
    />
    <span
      className="box"
    >
      <svg
        className="c1 c2 checkMark"
      />
    </span>
  </label>,
  .c2 {
  color: #FFFFFF;
  height: 100%;
  opacity: 0;
  width: 100%;
}

.c3 input:checked + .box .c1 {
  opacity: 1;
}

.c0 {
  display: block;
  font-size: 0.875rem;
  padding-left: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:not(:first-of-type) {
  margin-top: 16px;
}

.c0 input {
  display: none;
}

.c0 input:checked + .box {
  background-color: #0080A5;
  border: 1px solid #0080A5;
}

.c0 input:checked + .box .c1 {
  opacity: 1;
}

.c0 .box {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #F1F2F2;
  border: 1px solid #D9DDE2;
  border-radius: 5px;
  display: inline-block;
  height: 16px;
  left: 0;
  margin-top: 2px;
  position: absolute;
  top: 0;
  width: 16px;
}

.c0:hover .box {
  border: 1px solid #D9DDE2;
}

<label
    className="c0"
    disabled={true}
  >
     
    Car
    <input
      disabled={true}
      name="vehicule3"
      type="checkbox"
      value="car"
    />
    <span
      className="box"
    >
      <svg
        className="c1 c2 checkMark"
      />
    </span>
  </label>,
  .c2 {
  color: #FFFFFF;
  height: 100%;
  opacity: 0;
  width: 100%;
}

.c0 {
  cursor: pointer;
  display: block;
  font-size: 0.875rem;
  padding-left: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:not(:first-of-type) {
  margin-top: 16px;
}

.c0 input {
  display: none;
}

.c0 input:checked + .box {
  background-color: #0080A5;
  border: 1px solid #0080A5;
}

.c0 input:checked + .box .c1 {
  opacity: 1;
}

.c0 .box {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: 5px;
  display: inline-block;
  height: 16px;
  left: 0;
  margin-top: 2px;
  position: absolute;
  top: 0;
  width: 16px;
}

.c0:hover .box {
  border: 1px solid #0080A5;
}

.c3 input:checked + .box .c1 {
  opacity: 1;
}

<label
    className="c0"
  >
     
    Bike
    <input
      name="vehicule4"
      type="checkbox"
      value="bike"
    />
    <span
      className="box"
    >
      <svg
        className="c1 c2 checkMark"
      />
    </span>
  </label>,
]
`;

exports[`Theme Wrapper Returns component with default theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #EF483E;
  border-color: #EF483E;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #D41F14;
  border-color: #D41F14;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #FF847C;
  border-color: #FF847C;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;

exports[`Theme Wrapper Returns component with test theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #B3974B;
  border-color: #B3974B;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #FFD86B;
  border-color: #FFD86B;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #736130;
  border-color: #736130;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;
